fix: update z-index for h3 elements and extend scrollbar thumb hover transition duration

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -141,7 +141,7 @@ h3 {
   padding: 2px 6px;
   display: inline-block;
   position: relative;
-  z-index: 20;
+  z-index: 999;
 }
 .labelAQ {
   background: lemonchiffon;
@@ -462,7 +462,7 @@ html::-webkit-scrollbar-thumb:hover {
   user-select: none;
   font-weight: bold;
   transform: translateY(-100%);
-  transition: transform 5s cubic-bezier(0.77, 0, 0.18, 1);
+  transition: transform 7s cubic-bezier(0.77, 0, 0.18, 1);
 }
 
 .overlay-completed.active,
